fix: Adjust block access service to be correct without workarounds (#1147)
Signed-off-by: Joseph S <121976561+jsync-swirlds@users.noreply.github.com>